<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ec.gob.firmadigital</groupId>
    <artifactId>api</artifactId>
    <version>4.1.0</version>
    <packaging>war</packaging>

    <name>firmadigital-api</name>
    <description>API de Firma Digital.</description>
    <url>https://www.firmadigital.gob.ec</url>
    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
            <comments>Este proyecto está licenciado bajo GPLv3</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ricardo Arguello</name>
            <email>ricardo.arguello@soportelibre.com</email>
            <organization>Soporte Libre</organization>
            <organizationUrl>https://www.soportelibre.com</organizationUrl>
        </developer>
        <developer>
            <name>Misael Fernández Correa</name>
            <email>misael.fernandez@mintel.gob.ec</email>
            <organization>Ministerio de Telecomunicaciones y de la Sociedad de la Información</organization>
            <organizationUrl>https://www.telecomunicaciones.gob.ec</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://minka.gob.ec/snap/firmadigital-api.git</connection>
        <developerConnection>scm:git:git@minka.gob.ec:snap/firmadigital-api.git</developerConnection>
        <url>https://minka.gob.ec/snap/firmadigital-api</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <jakartaee>10.0.0</jakartaee>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <failOnMissingWebXml>false</failOnMissingWebXml>
    </properties>

    <dependencies>
        <!--consumo de servicios web-->
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>${jakartaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.activation</groupId>
            <artifactId>jakarta.activation-api</artifactId>
            <version>2.1.3</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jaxrs</artifactId>
            <version>3.15.6.Final</version>
            <type>jar</type>
        </dependency>
        <!--consumo de servicios web-->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>5.1.3.Final</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Dependencies>org.slf4j</Dependencies>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
